<resources>
    <string name="app_name">MobileSDK Demo</string>
    <string name="map_creation_error_title">Map creation failed</string>
    <string name="title">2GIS MobileSDK features\nand examples</string>
    <string name="geometry_menu_add_polygon">Add polygon</string>
    <string name="geometry_menu_add_polyline">Add polyline</string>
    <string name="geometry_menu_add_point">Add point</string>
    <string name="geometry_menu_add_poi">Add point with label</string>
    <string name="geometry_menu_add_point3d">Add point with elevation</string>
    <string name="geometry_menu_add_poi3d">Add point with label and elevation</string>
    <string name="geometry_menu_add_complex_object">Add complex object</string>
    <string name="geometry_menu_shift_objects">Shift objects</string>
    <string name="geometry_menu_remove_last">Remove last object</string>
    <string name="geometry_menu_remove_all">Remove all objects</string>
    <string name="geometry_menu_toggle_visibility">Toggle visibility</string>
    <string name="geometry_menu_toggle_color">Toggle color</string>
    <string name="attributes_menu_toggle_theme">Dark Theme</string>
    <string name="attributes_menu_toggle_dimension">2D</string>
    <string name="my_location_accuracy_text">Accuracy</string>
    <string name="my_location_pedestrian_mode_text">Pedestrian Mode</string>
    <string name="my_location_direction_text">Direction</string>
    <string name="my_location_available">Location Available</string>
    <string name="content_description_car">car</string>
    <string name="content_description_bus">public_transport</string>
    <string name="content_description_pedestrian">pedestrian</string>
    <string name="content_description_bicycle">bicycle</string>
    <string name="content_description_taxi">taxi</string>
    <string name="content_description_scooter">scooter</string>
    <string name="content_description_install_package">install territory</string>
    <string name="content_description_uninstall_package">remove territory</string>
    <string name="max_fps_limit">FPS limit:</string>
    <string name="power_saving_fps_limit">Power saving FPS limit:</string>
    <string name="start_map_moves">Start map moves</string>
    <string name="parking_toggle_button">Parking toggle button</string>
    <string name="shift">SHIFT</string>
    <string name="enabled">Enabled</string>
    <string name="rotation">ROTATION</string>
    <string name="anglediffdeg">angleDiffDeg</string>
    <string name="distancediffmm">distanceDiffMm</string>
    <string name="anglediffinscalingdeg">angleDiffInScalingDeg</string>
    <string name="distancediffinscalingmm">distanceDiffInScalingMm</string>
    <string name="scailing">SCALING</string>
    <string name="scaleratiothreshold">scaleRatioThreshold</string>
    <string name="scaleratiothresholdinrotation">scaleRatioThresholdInRotation</string>
    <string name="tilt">TILT</string>
    <string name="lenondegreemm">lenOnDegreeMm</string>
    <string name="horizontalswervedeg">horizontalSwerveDeg</string>
    <string name="verticalswervedeg">verticalSwerveDeg</string>
    <string name="thresholdmm">thresholdMm</string>
    <string name="multi_touch_shift">MULTI_TOUCH_SHIFT</string>
    <string name="rotation_center">ROTATION CENTER</string>
    <string name="choose">Choose</string>
    <string name="scailing_center">SCAILING CENTER</string>
    <string name="gestures">GESTURES</string>
    <string name="apply_rule">Apply Rule</string>
    <string name="clear_rules">Clear Rules</string>
    <string name="multipolygon">Multipolygon</string>
    <string name="polygon">Polygon</string>
    <string name="polyline">Polyline</string>
    <string name="take_snapshot">Take snapshot!</string>
    <string name="territories_all">All</string>
    <string name="territories_by_position">Position</string>
    <string name="territories_by_viewport">Viewport</string>
    <string name="left">Left:</string>
    <string name="top">Top:</string>
    <string name="right">Right:</string>
    <string name="bottom">Bottom:</string>
    <string name="margins">Margins:</string>
    <string name="gravity">Gravity:</string>
    <string name="top_left">↖</string>
    <string name="top_right">↗</string>
    <string name="bottom_left">↙</string>
    <string name="bottom_right">↙</string>
    <string name="Version">Version</string>
    <string-array name="route_search_types">
        <item>Car</item>
        <item>Pedestrian</item>
        <item>Bicycle</item>
    </string-array>
    <string-array name="events_processing_settings">
        <item>EVENT_CENTER</item>
        <item>MAP_POSITION</item>
    </string-array>
    <string-array name="locales_list">
        <item>az_AZ</item>
        <item>en-En</item>
        <item>ru-Ru</item>
        <item>System</item>
    </string-array>
    <string name="locale">Locale</string>
</resources>
