<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/multiPolygonSwitch"
        style="@style/SwitchItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="multipolygon"
        android:text="@string/multipolygon" />

    <RadioButton
        android:id="@+id/polygonSwitch"
        style="@style/SwitchItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="polygon"
        android:text="@string/polygon" />

    <RadioButton
        android:id="@+id/polylineSwitch"
        style="@style/SwitchItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="polyline"
        android:text="@string/polyline" />

</RadioGroup>
