<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CopyrightActivity">

    <ru.dgis.sdk.map.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:dgis_cameraTargetLat="25.204575"
        app:dgis_cameraTargetLng="55.25939"
        app:dgis_cameraZoom="9" />

    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/margins"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left" />

            <SeekBar
                android:id="@+id/seekLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top" />

            <SeekBar
                android:id="@+id/seekTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right" />

            <SeekBar
                android:id="@+id/seekRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom" />

            <SeekBar
                android:id="@+id/seekBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="0" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/gravity"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/gravityRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioTopLeft"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/ic_radio_square"
                android:button="@null"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/top_left"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioTopRight"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_radio_square"
                android:button="@null"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/top_right"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioBottomLeft"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_radio_square"
                android:button="@null"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/bottom_left"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioBottomRight"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_radio_square"
                android:button="@null"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/bottom_right"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/versionCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/Version"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
