<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/SubheadMediumLeftBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/shift" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/shiftSwitch"
            style="@style/SwitchItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enabled" />

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            style="@style/SubheadMediumLeftBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotation" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/rotationSwitch"
            style="@style/SwitchItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enabled" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyRegularLeftBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/anglediffdeg" />

            <EditText
                android:id="@+id/rotation_anglediffdeg_editText"
                style="@style/EditText.Number.Float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyRegularLeftBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/distancediffmm" />

            <EditText
                android:id="@+id/rotation_distancediffmm"
                style="@style/EditText.Number.Float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyRegularLeftBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/anglediffinscalingdeg" />

            <EditText
                android:id="@+id/rotation_anglediffinscalingdeg"
                style="@style/EditText.Number.Float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyRegularLeftBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/distancediffinscalingmm" />

            <EditText
                android:id="@+id/rotation_distancediffinscalingmm"
                style="@style/EditText.Number.Float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            style="@style/SubheadMediumLeftBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/scailing" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/scailingSwitch"
            style="@style/SwitchItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enabled" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyRegularLeftBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/scaleratiothreshold" />

            <EditText
                android:id="@+id/scailing_scaleratiothreshold"
                style="@style/EditText.Number.Float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyRegularLeftBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/scaleratiothresholdinrotation" />

            <EditText
                android:id="@+id/scailing_scaleratiothresholdinrotation"
                style="@style/EditText.Number.Float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            style="@style/SubheadMediumLeftBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/tilt" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/tiltSwitch"
            style="@style/SwitchItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enabled" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyRegularLeftBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/lenondegreemm" />

            <EditText
                android:id="@+id/tilt_lenondegreemm"
                style="@style/EditText.Number.Float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyRegularLeftBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/horizontalswervedeg" />

            <EditText
                android:id="@+id/tilt_horizontalswervedeg"
                style="@style/EditText.Number.Float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyRegularLeftBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/verticalswervedeg" />

            <EditText
                android:id="@+id/tilt_verticalswervedeg"
                style="@style/EditText.Number.Float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyRegularLeftBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/thresholdmm" />

            <EditText
                android:id="@+id/tilt_thresholdmm"
                style="@style/EditText.Number.Float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            style="@style/SubheadMediumLeftBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/multi_touch_shift" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/multiTouchShiftSwitch"
            style="@style/SwitchItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enabled" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyRegularLeftBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/thresholdmm" />

            <EditText
                android:id="@+id/multiTouchShift_thresholdmm"
                style="@style/EditText.Number.Float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp" />
    </LinearLayout>

</ScrollView>
