<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/BodyRegularLeftBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_fps_limit"/>

        <EditText
            android:id="@+id/maxFpsSetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/BodyRegularLeftBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_saving_fps_limit"/>

        <EditText
            android:id="@+id/powerSaveFpsSetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_map_moves"/>

</LinearLayout>
