<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/SubheadMediumLeftBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotation_center" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        >
        <AutoCompleteTextView
            android:id="@+id/rotationCenterTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:hint="@string/choose"
            tools:text="Happy" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/SubheadMediumLeftBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scailing_center" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        >
        <AutoCompleteTextView
            android:id="@+id/scailingCenterTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:hint="@string/choose"
            tools:text="Happy" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp" />

</LinearLayout>
